--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1227,3 +1227,16 @@ section {
 #footer .credits {
   font-size: 13px;
 }
+
+.img-container {
+  width: 400px; /* Adjust the size as needed */
+  height: 400px; /* Adjust the size as needed */
+  border: 2px solid black; /* Set the color of the border */
+  overflow: hidden;
+}
+
+.img-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensure the image covers the entire container */
+}
